# portfolio-oleg-psychologist

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_PLAN.md  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md
src/psychologist_memory_demo/: __init__.py  demo.py  memory.py  models.py  prompt.py  safety.py  session.py
tests/: test_memory_workflow.py
