[project]
name = "psychologist-memory-demo"
version = "0.1.0"
description = "Sanitized demo of long-term memory architecture for a sensitive AI assistant."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psychologist_memory_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
